--- a/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Home/Index.cshtml
+++ b/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Home/Index.cshtml
@@ -1,8 +1,51 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model productDisplayModel
+   @{
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   }
+<div class="my-2">
+    <form asp-action="Index" class="row row-cols-lg-auto g-3 align-items-center">
+        <div class="col-12">
+            <label class="visually-hidden" for="categoryId"></label>
+            <select class="form-select" id="categoryId" name="categoryId">
+                <option selected>Category</option>
+                @foreach(var item in Model.categories)
+                {
+                    <option selected="@(item.Id==Model.categoryId)" value="@item.Id">@item.categoryName</option>
+                }
+            </select>
+        </div>
+        <div class="col-12">
+            <label class="visually-hidden" for="sterm">Search</label>
+            <div class="input-group">
+                <div class="input-group-text">
+                    <input type="text" class="form-control" value="@Model.sterm" id="sterm" name="sterm" placeholder="Search" />
+                </div>
+            </div>
+        </div>
+        <div class="col-12">
+            <button type="submit" class="btn btn-primary">Search</button>
+        </div>
+    </form>
+</div>
+
+
+<div class="w-100 mt-4 d-flex flex-wrap">
+    @foreach(var product in Model.products)
+    {
+            <div class="card mx-2 mb-4"  style="width: 16rem;">
+            <img class="card-img-top" src="/images/@product.imageUrl" alt="..." style="width:100% ;height:300px">
+                <div class="card-body">
+                    <h5 class="card-title">@product.productName</h5>
+                    <p class="card-text">
+                        category:@product.categoryName
+                        price:@product.price
+
+                    </p>
+                    <a href="#" class="btn btn-primary">Add the card</a>
+
+                </div>
+        </div>
+    }
+
+   
 </div>
