--- a/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Shared/_LoginPartial.cshtml
+++ b/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,21 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 <ul class="navbar-nav">
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+            <span id="cartCount" class="badge text-bg-info">0</span>
+            <i class="bi bi-cart"></i>
+        </a>
+
+    </li>
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+                Hello <span id="username">@User.Identity?.Name</span>
+            </a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
@@ -16,14 +25,7 @@
 }
 else
 {
-        <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span class="badge text-bg-info">0</span>
-                <i class="bi bi-cart"></i>
-
-            </a>
-            
-        </li>
+      
 
     <li class="nav-item">
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Register</a>
