--- a/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Shared/_LoginPartial.cshtml
+++ b/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Shared/_LoginPartial.cshtml
@@ -12,12 +12,21 @@
     </li>
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
+        <li class="nav-item">
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-                Hello <span id="username">@User.Identity?.Name</span>
+                <span id="username">@User.Identity?.Name</span>
             </a>
-    </li>
-    <li class="nav-item">
+        </li>
+    
+        @if (User.IsInRole("Admin"))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-white" asp-area="Admin" asp-page="/Home" title="Index">
+                    <span >Quan li</span>
+                </a>
+            </li>
+        }
+        <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-white">Logout</button>
         </form>
@@ -26,7 +35,6 @@
 else
 {
       
-
     <li class="nav-item">
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
