--- a/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/ShoppingCart/GetUserCart.cshtml
+++ b/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/ShoppingCart/GetUserCart.cshtml
@@ -2,12 +2,12 @@
 @{
     ViewData["Title"] = "GetUserCart";
 }
-<div style="width:90%; margin:auto">
+<div style="width:90%; margin:auto" class="mt-2">
     @if (Model != null &&  Model.cartDetails!= null&& Model.cartDetails.Count>0)
     {
-        <h3>Gio hang cua toi</h3>
+        <h5>Gio hang cua toi</h5>
        
-        <table class="table table-bordered">
+        <table class="table table-striped">
             <tr>
                 <th>Product</th>
                 <th>Image</th>
@@ -24,14 +24,14 @@
                         <img src="/images/@item.product.imageUrl" style="width:80px;height:100px">
                     </td>
                     <td>@item.product.categoryName</td>
-                    <td>@item.quantity</td>
-                    <td>@(item.quantity * item.product.price)</td>
+                    <td>@item.quantity x @item.product.price </td>
+                    <td>@(item.product.price*item.quantity)</td>
                     <td>
-                        <a class="btn btn-info" href="/Cart/AddItem?productId=@item.productId">+</a>
+                        <a class="btn btn-info" href="/Cart/AddItem ? productId={@item.productId}&redirect==1">+</a>
                         <a class="btn btn-info" href="/Cart/Remove?productId=@item.productId">-</a>
                     </td>
                 </tr>
-                }
+            }
             
         </table>
 
@@ -39,10 +39,5 @@
             <h5>Total:</h5>
             @(Model.cartDetails.Select(item => item.product.price * item.quantity).Sum())
         </div>
-        }
-   
-     
-    
-   
-   
+     }
 </div>
