--- a/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿ @page
 @model LoginModel
 
 @{
@@ -6,11 +6,11 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<div class="row">
+@* <div class="row">
     <div class="col-md-4">
-        <section>
+
             <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
+                     <section>   <h2>Use a local account to log in.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                 <div class="form-floating mb-3">
@@ -76,8 +76,28 @@
             }
         </section>
     </div>
-</div>
+</div> *@
 
+<div id="wrapper">
+    <body class="bg">
+        <form action=""  id="account" method="post">
+            <h1 class="form-heading">ĐĂNG NHẬP</h1>
+            <div class="form-group">
+                <i class="far fa-user"></i>
+                <input asp-for="Input.Email" autocomplete="username" aria-required="true" type="text" class="form-input" placeholder="Tên đăng nhập">
+            </div>
+            <div class="form-group">
+                <i class="fas fa-key"></i>
+                <input asp-for="Input.Password" type="password" class="form-input" placeholder="Mật khẩu">
+                <div id="eye">
+                    <i class="far fa-eye"></i>
+                </div>
+            </div>
+            <button type="submit" value="Đăng nhập" id="login-submit" class="form-submit">Đăng nhập</button>
+        </form>
+    </body>
+   
+</div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
