--- a/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Shared/_Layout.cshtml
+++ b/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Shared/_Layout.cshtml
@@ -11,7 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CNPM_ktxUtc2Store.styles.css" asp-append-version="true" />
-
+    <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="~/js/login.js" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -72,8 +74,9 @@
         }
     </script>
   
+<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+<script src="~/js/login.js"></script>
 </body>
-
 
 </html>
 @await RenderSectionAsync("Scripts", required: false)
