--- a/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Shared/_LoginPartial.cshtml
+++ b/CNPM-ktxUtc2Store/CNPM-ktxUtc2Store/Views/Shared/_LoginPartial.cshtml
@@ -21,7 +21,7 @@
         @if (User.IsInRole("Admin"))
         {
             <li class="nav-item">
-                <a class="nav-link text-white" asp-area="Admin" asp-page="/Home" title="Index">
+                <a class="nav-link text-white" href="/Admin/Home" >
                     <span >Quan li</span>
                 </a>
             </li>
